# aurora-framework

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
apps/native/: Cargo.toml  package.json  tauri.conf.json
apps/web/: astro.config.mjs  package.json
apps/web/src/layouts/: MainLayout.astro
apps/web/src/pages/: index.astro
